--- a/README
+++ b/README
@@ -1,26 +1,41 @@
 Some added Functionality to Curt McMullen's 'ORBITS OF AUTOMORPHISMS OF K3 SURFACES, Version 3.2 3/2006'
 Most of this ReadMe is a regurgitation of his ReadMe.
 
-See his ReadMe for instructions on how to use "Traj" and "Stable." 
-
 QUICKSTART.
-Type "cd src; make" to install,
-then "cd ../example; ./Traj.run; ./Stable.run" to test.
+Starting in example or src folders.
+To execute './Mclass.run' type
+cd ..; cd src; make; cd ..; cd example; ./Mclass.run
+Same for other .run files
 
 THEORY.  A K3 surface S in R^3 is specified by the equation
 
 (1+x^2)(1+y^2)(1+z^2) + Axyz = B .
 
+In many files, we set $A = 10$, $B = 2$.
+
 Each line parallel to the x, y or z axis meets S in 2
 points, so we obtain 3 involutions by "sheet interchange".
 These maps preserves a natural volume element on S.
 
-Set f = Iz Iy Ix Iz Iy Ix;
+Set f = Iz Iy Ix;
 
-PROGRAMS.  This directory contains 4 programs:
-	mclass	- 
-	paths  - 
-	periodic - finds almost-periodic points using minimal guaranteed accuracy 
+PROGRAMS.  This directory contains 5 programs:
+
+	periodicExact 
+		- Verifies a particular delta-pseudo orbit using the MPHR library
+	derivativesExact 
+		- Gives derivative information the specific pseudoOrbit above using MPHR library.
+	paths  
+		- Input: a periodic point and its period 
+		- Output: image path data (see paths for a description)
+	mclass	
+		- Input: image path data
+		- Output: Mapping class of f, up to reflection, in terms of dehn half-twists
+	Periodic 
+		- Experimentation only; useful for finding recurrent orbits
+	Derivatives 
+		- Experimentation only; gives derivative information along an orbit without using MPHR library
+
 
 
 STABLE INPUT.  All input to stable is via command-line arguments.
@@ -54,6 +69,6 @@ EXAMPLES.  See the example/ directory for usage.
 
 TROUBLESHOOTING
 
-IF: path length exceeded N
+IF: 'path length exceeded N'
 THEN: increase eps, increase MaxPathlength
 
