--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Some added Functionality to Curt McMullen's 'ORBITS OF AUTOMORPHISMS OF K3 SURFACES, Version 3.2 3/2006'
+Some added functionality to Curt McMullen's 'ORBITS OF AUTOMORPHISMS OF K3 SURFACES, Version 3.2 3/2006'
 Most of this ReadMe is a repurposed version of his ReadMe.
 
 QUICKSTART.
