--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Some added functionality to Curt McMullen's 'ORBITS OF AUTOMORPHISMS OF K3 SURFACES, Version 3.2 3/2006'
-Most of this ReadMe is a repurposed version of his ReadMe.
+Much of this ReadMe is a regurgitation of his ReadMe.
 
 QUICKSTART.
 Starting in 'example' or 'src' folders.
