--- a/FlipperDilatation.ipynb
+++ b/FlipperDilatation.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b1776988-00c6-4c1e-98e4-6ae0511bd2d2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
@@ -49,7 +53,7 @@
     "import flipper\n",
     "surface = 'SB_10'\n",
     "S = flipper.load(surface)\n",
-    "big_word = 'S_5.s_6.s_7.S_8.S_8.S_7.S_6.S_5.s_4.s_3.s_1.s_0.s_2.s_1.s_7.S_8.S_8.S_7.S_6.s_5.s_4.s_3.s_2.S_8.S_7.s_6.s_5.s_4.s_3.S_4.S_3.S_2.S_1.S_0.S_0.S_1.S_2.S_3.S_4.S_5.S_6.S_7.S_7.s_6.s_5.s_4.S_8.S_7.S_6.S_5.S_4.S_3.S_2.S_1.S_0.S_0.S_1.S_2.S_3.S_4.S_5.S_6.S_7.S_8.S_8.s_7.s_6.s_5.s_7.S_6.S_5.S_4.S_3.S_2.S_1.S_0.S_0.S_1.S_2.S_3.S_4.S_5.S_6.S_7.S_8.S_8.s_7.s_6.S_7.S_6.S_5.S_4.S_3.S_2.S_1.S_0.S_0.S_1.S_2.S_3.S_4.S_5.S_6.S_7.S_8.S_8.S_6.S_5.S_4.S_3.S_2.S_1.S_0.S_0.S_1.S_2.S_3.S_4.S_5.S_6.S_7.S_8.S_8.s_5.S_6.S_7.s_8.s_8.s_7.s_6.s_5.S_4.S_3.S_1.S_0.S_2.S_1.S_7.s_8.s_8.s_7.s_6.S_5.S_4.S_3.S_2.s_8.s_7.S_6.S_5.S_4.S_3.s_4.s_3.s_2.s_1.s_0.s_0.s_1.s_2.s_3.s_4.s_5.s_6.s_7.s_7.S_6.S_5.S_4.s_8.s_7.s_6.s_5.s_4.s_3.s_2.s_1.s_0.s_0.s_1.s_2.s_3.s_4.s_5.s_6.s_7.s_8.s_8.S_7.S_6.S_5.S_7.s_6.s_5.s_4.s_3.s_2.s_1.s_0.s_0.s_1.s_2.s_3.s_4.s_5.s_6.s_7.s_8.s_8.S_7.S_6.s_7.s_6.s_5.s_4.s_3.s_2.s_1.s_0.s_0.s_1.s_2.s_3.s_4.s_5.s_6.s_7.s_8.s_8.s_6.s_5.s_4.s_3.s_2.s_1.s_0.s_0.s_1.s_2.s_3.s_4.s_5.s_6.s_7.s_8.s_8'\n",
+    "big_word = 's_5.S_6.S_7.s_8.s_8.s_7.s_6.s_5.S_4.S_3.S_1.S_0.S_2.S_1.S_7.s_8.s_8.s_7.s_6.S_5.S_4.S_3.S_2.s_8.s_7.S_6.S_5.S_4.S_3.s_4.s_3.s_2.s_1.s_0.s_0.s_1.s_2.s_3.s_4.s_5.s_6.s_7.s_7.S_6.S_5.S_4.s_8.s_7.s_6.s_5.s_4.s_3.s_2.s_1.s_0.s_0.s_1.s_2.s_3.s_4.s_5.s_6.s_7.s_8.s_8.S_7.S_6.S_5.S_7.s_6.s_5.s_4.s_3.s_2.s_1.s_0.s_0.s_1.s_2.s_3.s_4.s_5.s_6.s_7.s_8.s_8.S_7.S_6.s_7.s_6.s_5.s_4.s_3.s_2.s_1.s_0.s_0.s_1.s_2.s_3.s_4.s_5.s_6.s_7.s_8.s_8.S_7.s_7.s_6.s_5.s_4.s_3.s_2.s_1.s_0.s_0.s_1.s_2.s_3.s_4.s_5.s_6.s_7.s_8.s_8.S_5.s_6.s_7.S_8.S_8.S_7.S_6.S_5.s_4.s_3.s_1.s_0.s_2.s_1.s_7.S_8.S_8.S_7.S_6.s_5.s_4.s_3.s_2.S_8.S_7.s_6.s_5.s_4.s_3.S_4.S_3.S_2.S_1.S_0.S_0.S_1.S_2.S_3.S_4.S_5.S_6.S_7.S_7.s_6.s_5.s_4.S_8.S_7.S_6.S_5.S_4.S_3.S_2.S_1.S_0.S_0.S_1.S_2.S_3.S_4.S_5.S_6.S_7.S_8.S_8.s_7.s_6.s_5.s_7.S_6.S_5.S_4.S_3.S_2.S_1.S_0.S_0.S_1.S_2.S_3.S_4.S_5.S_6.S_7.S_8.S_8.s_7.s_6.S_7.S_6.S_5.S_4.S_3.S_2.S_1.S_0.S_0.S_1.S_2.S_3.S_4.S_5.S_6.S_7.S_8.S_8.s_7.S_7.S_6.S_5.S_4.S_3.S_2.S_1.S_0.S_0.S_1.S_2.S_3.S_4.S_5.S_6.S_7.S_8.S_8'\n",
     "h = S.mapping_class(big_word)\n",
     "print('h is %s.' % h.nielsen_thurston_type())\n",
     "print('dilatation is %f.' % h.dilatation())"
@@ -59,7 +63,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "466e1a7f-b347-4968-a800-f5c7ddeaed58",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -84,7 +92,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "3a43655e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -109,7 +121,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "29c0b6aa",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -134,7 +150,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "b4499dd3",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -159,7 +179,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "f9bc354e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -184,7 +208,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ea99a0a6",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": []
   }
@@ -202,7 +230,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "sage",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.5"
